# PhD_parser

./: LICENSE  README.md  pyproject.toml
_old/phd_parser/: __init__.py
_old/phd_parser/box2/: agilent.py  labview.py
_old/units/: __init__.py  factors.py  transformer.py
runs_plot/: test_raman_btc655n.ipynb
runs_test/: test_drifts.ipynb  test_drifts_omnic.ipynb  test_ms.ipynb  test_ms_quadstar.ipynb  test_quadstar.ipynb  test_raman.ipynb  test_raman_btc655n.ipynb  test_raman_renishaw.ipynb  test_tga.ipynb  test_xps.ipynb  test_xrd.ipynb
src/phd_parser/: __init__.py  logging.py
src/phd_parser/box2/: results.py
src/phd_parser/box5/: __init__.py  thermofisher.py
src/phd_parser/infrared/: __init__.py  core.py  omnic.py  thermofisher.py
src/phd_parser/labview/: __init__.py  b67box5.py  core.py
src/phd_parser/massspec/: __init__.py  core.py  quadstar.py
src/phd_parser/raman/: __init__.py  btc655n.py  core.py  renishaw.py  renishaw_wdf.py
src/phd_parser/tga/: __init__.py  core.py  e2290.py  tga.py  tga_e2290.py
src/phd_parser/units/: __init__.py  factors.py
src/phd_parser/xps/: __init__.py  casaxps.py
src/phd_parser/xrd/: __init__.py  core.py  xrd.py  (+1 more)
tests/infrared/: test_omnic.py
tests/massspec/: 2026-03-26_sk1002_02-react.asc  test_quadstar.py
tests/raman/: test_TiO2.txt  test_blackplastic.txt  test_btc655n.py  test_nat_090.txt  test_nat_091.txt  test_nat_092.txt  test_nolaser.txt
tests/tga/: test_e2290.py
tests/xps/: casaxps_export_doublet.txt  casaxps_export_single.txt  test_casaxps.py
tests/xrd/: test_xrd.py  xrd_mock_e1290.xy
(+20 files in other folders)
